# react-voice-agent

./: .gitignore  README.md
client/: package-lock.json  package.json
js_server/: README.md  package.json
js_server/src/: index.ts  prompt.ts  tools.ts
js_server/src/lib/: langchain_openai_voice.ts  utils.ts
js_server/static/: audio-playback-worklet.js  audio-processor-worklet.js  index.html
server/: pyproject.toml
server/src/langchain_openai_voice/: __init__.py
server/src/server/: app.py  graph.py  just_browser.html  openai.py  prompt.py  to_socket.html  tools.py  utils.py
server/src/server/static/: index.html
