[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.32",
    "starlette>=0.39.2",
    "uvicorn[standard]>=0.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
